--- a/notebooks/filtered_dataset.ipynb
+++ b/notebooks/filtered_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -419,8 +419,8 @@
       "Counted characters for economy.\n",
       "Added category for economy.\n",
       "Parsed URLs for economy.\n",
-      "CPU times: user 3.35 s, sys: 209 ms, total: 3.56 s\n",
-      "Wall time: 491 ms\n"
+      "CPU times: user 3.78 s, sys: 232 ms, total: 4.01 s\n",
+      "Wall time: 551 ms\n"
      ]
     }
    ],
@@ -468,12 +468,12 @@
     "    df_merge = pd.concat([df_merge, df], ignore_index=True)\n",
     "    \n",
     "    # Save the processed DataFrame to a new CSV file\n",
-    "    df.to_csv(f\"../data/filtered_dataset.csv\", index=False)"
+    "    df_merge.to_csv(f\"../data/filtered_dataset.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -635,17 +635,64 @@
        "</div>"
       ],
       "text/plain": [
-       "                                               title  ... extension\n",
-       "0                 The finance uncertainty multiplier  ...      None\n",
-       "1                    The finance of local government  ...      None\n",
-       "2  Mathematics for economics and finance: methods...  ...      None\n",
-       "3     The technology of decentralized finance (DeFi)  ...      None\n",
-       "4                                   Personal finance  ...      None\n",
+       "                                               title  \\\n",
+       "0                 The finance uncertainty multiplier   \n",
+       "1                    The finance of local government   \n",
+       "2  Mathematics for economics and finance: methods...   \n",
+       "3     The technology of decentralized finance (DeFi)   \n",
+       "4                                   Personal finance   \n",
        "\n",
-       "[5 rows x 18 columns]"
+       "                                             authors    year  \\\n",
+       "0                           I Alfaro, N Bloom, X Lin  2024.0   \n",
+       "1                                        NP Hepworth  2024.0   \n",
+       "2                                 M Anthony, N Biggs  2024.0   \n",
+       "3  R Auer, B Haslhofer, S Kitzler, P Saggese, F V...  2024.0   \n",
+       "4                                      VL Bajtelsmit  2024.0   \n",
+       "\n",
+       "                                         description  \\\n",
+       "0  We show how real and financial frictions ampli...   \n",
+       "1  Originally published in 1970 this book quickly...   \n",
+       "2  Accessible, concise, and interactive, this boo...   \n",
+       "3  Decentralized Finance (DeFi) is a new financia...   \n",
+       "4  Personal Finance, 3rd Edition offers essential...   \n",
+       "\n",
+       "                                                 url  citations  \\\n",
+       "0  https://www.journals.uchicago.edu/doi/full/10....        407   \n",
+       "1  https://books.google.com/books?hl=en&lr=&id=kF...        176   \n",
+       "2  https://books.google.com/books?hl=en&lr=&id=xW...         95   \n",
+       "3  https://link.springer.com/article/10.1007/s425...         91   \n",
+       "4  https://books.google.com/books?hl=en&lr=&id=SN...         36   \n",
+       "\n",
+       "                               clean_title  type  cluster  word_count  \\\n",
+       "0                   uncertainty multiplier  None        0           2   \n",
+       "1                         local government  BOOK        0           2   \n",
+       "2  mathematics economics methods modelling  BOOK        0           4   \n",
+       "3            technology decentralized defi  None        3           3   \n",
+       "4                                 personal  BOOK        7           1   \n",
+       "\n",
+       "   char_count category                 domain                    publisher  \\\n",
+       "0          21  finance  journals.uchicago.edu  University of Chicago Press   \n",
+       "1          15  finance       books.google.com                 Google Books   \n",
+       "2          36  finance       books.google.com                 Google Books   \n",
+       "3          27  finance      link.springer.com                     Springer   \n",
+       "4           8  finance       books.google.com                 Google Books   \n",
+       "\n",
+       "                                  path  \\\n",
+       "0             /doi/full/10.1086/726230   \n",
+       "1                               /books   \n",
+       "2                               /books   \n",
+       "3  /article/10.1007/s42521-023-00088-8   \n",
+       "4                               /books   \n",
+       "\n",
+       "                                        query_params             doi extension  \n",
+       "0                                                 {}  10.1086/726230      None  \n",
+       "1  {'hl': ['en'], 'id': ['kFczEQAAQBAJ'], 'oi': [...            None      None  \n",
+       "2  {'hl': ['en'], 'id': ['xWAJEQAAQBAJ'], 'oi': [...            None      None  \n",
+       "3                                                 {}  10.1007/s42521      None  \n",
+       "4  {'hl': ['en'], 'id': ['SNjzEAAAQBAJ'], 'oi': [...            None      None  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
